[gd_scene load_steps=7 format=3 uid="uid://b1slk30u3rl1c"]

[ext_resource type="FontFile" uid="uid://fyhbph4dwu04" path="res://gameArt/nintendo-nes-font.ttf" id="1_gxyfr"]
[ext_resource type="Script" path="res://Textbox.gd" id="1_x87ab"]
[ext_resource type="AudioStream" uid="uid://ldplagxbvayv" path="res://gameAudio/textAdvance.wav" id="3_pyen6"]
[ext_resource type="AudioStream" uid="uid://bi6ignsbej7qf" path="res://gameAudio/textEnd.wav" id="4_7x4e7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_006b4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cqgvn"]
line_spacing = 16.0
font_size = 32

[node name="Textbox" type="CanvasLayer"]
script = ExtResource("1_x87ab")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -227.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_006b4")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_gxyfr")
theme_override_font_sizes/font_size = 32
text = "-"

[node name="Label" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_gxyfr")
theme_override_font_sizes/font_size = 48
text = "TEXT! THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG. KUWABARA KUWABARA. RUN IT BACK."
label_settings = SubResource("LabelSettings_cqgvn")
autowrap_mode = 2
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_gxyfr")
theme_override_font_sizes/font_size = 32
text = "v"

[node name="ReadingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pyen6")
volume_db = -9.362
pitch_scale = 1.12

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7x4e7")
